# amlnn-model-playground

./: README.md  README_CN.md
dependency/nnsdk/include/: nn_sdk.h
examples/resnet/cpp/: build-android.sh  build-linux.sh
examples/resnet/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h
examples/retinaface/cpp/: build-android.sh  build-linux.sh
examples/retinaface/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h
examples/yolov11/cpp/: build-android.sh  build-linux.sh
examples/yolov11/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h  yolo11.cpp
